Freedom Sanbox Ant Deploy/src/objects/Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Department__r.Business_Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomUniqueKey__c</fullName>
        <label>CustomUniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Allocation_Count__c</fullName>
        <label>Entity Allocation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Entity_Allocation_Date__c</fullName>
        <label>Last Entity Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Allocation_Count__c</fullName>
        <label>Partner Allocation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business_Unit__c</columns>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Team_Member__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Account_00NW0000000ihXuMAI</fullName>
        <active>true</active>
        <field>Account.FPA_Team_Member__c</field>
        <filterItems>
            <field>Team_Member__c.Department__r.Type_of_Department__c</field>
            <operation>equals</operation>
            <value>FPA</value>
        </filterItems>
        <filterItems>
            <field>Team_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Account_FPA (Financial Planning &amp; Adviso</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NW0000000ihXzMAI</fullName>
        <active>true</active>
        <errorMessage>Please Verify MST Team Member Corresponding Deparment</errorMessage>
        <field>Account.MST_Team_Member__c</field>
        <filterItems>
            <field>Team_Member__c.Department__r.Type_of_Department__c</field>
            <operation>equals</operation>
            <value>MST</value>
        </filterItems>
        <filterItems>
            <field>Team_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_MST (Member Success Team)</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NW0000000ihY9MAI</fullName>
        <active>true</active>
        <errorMessage>Please Verify PST Team Member Corresponding Deparment</errorMessage>
        <field>Account.PST_Team_Member__c</field>
        <filterItems>
            <field>Team_Member__c.Department__r.Type_of_Department__c</field>
            <operation>equals</operation>
            <value>PST</value>
        </filterItems>
        <filterItems>
            <field>Team_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_PST (Practise Success Team)</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NW0000000iisFMAQ</fullName>
        <active>true</active>
        <field>Account.OPS_Team_Member__c</field>
        <filterItems>
            <field>Team_Member__c.Department__r.Type_of_Department__c</field>
            <operation>equals</operation>
            <value>MST2 (Operations)</value>
        </filterItems>
        <filterItems>
            <field>Team_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Account_OPs (Operations Team)</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00NW0000000imj2MAA</fullName>
        <active>true</active>
        <field>Lead.PST_Team_Member__c</field>
        <filterItems>
            <field>Team_Member__c.Department__r.Type_of_Department__c</field>
            <operation>equals</operation>
            <value>PST</value>
        </filterItems>
        <filterItems>
            <field>Team_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_PST (Practice Success Team)</name>
    </namedFilters>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>